# AGI

./: CMakeLists.txt  Makefile  config.el  init.el  packages-x86_64.txt  packages.el
data/Soul/: EmotionData.json
include/: AGI.h
include/Body/: body.h
include/Body/Action/: verbs.h
include/Body/Input/: senses.h
include/Soul/: soul.h
include/Soul/Emotion/: Emotion.h
include/Util/db/: db.h
src/: AGI.cpp
templates/: actions.html  emotions.html  index.html
